--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 .pb{
 	margin-left: 30px;
-	padding: 100px 0px 0px 40px;
+	padding: 100px 0px 0px 20px;
 }
 h1{ 
 	 font-family: 'Montserrat, sans-serif';
@@ -28,6 +28,7 @@ h2{
 	font-family: Montserrat-Bold";
 	font-size: 3rem;
 	margin-bottom: 20px;
+	margin-left: 5%;
 }
 
 .sub-title{
@@ -69,3 +70,18 @@ p{
 	padding-top: 3%;
 }
 
+.testimonial-para{
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+ .Authorize-logo{
+ 	width: 15%;
+	margin: 20px 20px 50px 20px;
+ }
+
+ #press{
+ 	background-color: black;
+	text-align: center;
+	padding-bottom: 3%;
+ }
